--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -37,24 +37,24 @@
                     <GradientStop Color="#FFD1BBBB" Offset="1"/>
                 </LinearGradientBrush>
             </TabControl.OpacityMask>
-            <TabItem Header="Rapportering" Margin="-2,-2,-89,0" Background="White" Foreground="Black" BorderBrush="{x:Null}">
+            <TabItem Header="Rapportering" Margin="-2,-2,-89,0" Background="White" Foreground="Black" BorderBrush="{x:Null}" FontSize="14" FontWeight="Bold">
                 <Canvas Margin="13,28,223,96">
                     <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="108" Height="27" Background="Black"></DatePicker>
                     <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbFreeDay" Content="Ange antal lediga dagar" Canvas.Top="18" Width="197" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbCarTripLength" Content="Lägg till bilresa" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="1" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label x:Name="lbLand" Content="Välj land" Canvas.Left="192" Canvas.Top="170" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbLand" Content="Välj land" Canvas.Left="179" Canvas.Top="164" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="74" Width="102" Background="Black" Foreground="White"/>
-                    <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan" Canvas.Left="453" Canvas.Top="20" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
+                    <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan" Canvas.Left="449" Canvas.Top="29" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <TextBox x:Name="tbDoneOnTrip" Height="135" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="56" Width="257" Background="Black" Foreground="White"/>
                     <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="24" Width="38" Background="Black" Foreground="White"/>
-                    <ComboBox x:Name="CbCountries" Canvas.Left="192" Canvas.Top="202" Width="224" SelectionChanged="CbCountries_SelectionChanged"/>
+                    <ComboBox x:Name="CbCountries" Canvas.Left="182" Canvas.Top="191" Width="224" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
                     <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto
-                            " Canvas.Left="4" Canvas.Top="501" Width="171" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="50,1,1,1" Click="Button_Click_1" Height="28"/>
-                    <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="411" Width="175" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278"/>
-                    <TextBox x:Name="tbReceiptFile" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="383" Width="177" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White"/>
-                    <TextBox x:Name="tbSum" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="468" Width="173" RenderTransformOrigin="0.5,0.5" Background="Black" Foreground="White">
+                            " Canvas.Left="165" Canvas.Top="473" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
+                    <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="399" Width="88" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="165"/>
+                    <TextBox x:Name="tbReceiptFile" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="374" Width="253" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbSum" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="448" Width="250" RenderTransformOrigin="0.5,0.5" Background="Black" Foreground="White" Canvas.Left="-1">
                         <TextBox.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -65,24 +65,23 @@
                         </TextBox.RenderTransform>
                     </TextBox>
                     <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto
-                            " Canvas.Left="7" Canvas.Top="726" Width="81" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="White" Foreground="Black" Background="White" Click="btnRemoveSelectedReceipt_Click" Height="26"/>
-                    <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Top="535" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" RenderTransformOrigin="0.465,-1"/>
-                    <Label Content="Belopp för kvitto" Canvas.Top="438" Width="144" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                            " Canvas.Left="320" Canvas.Top="698" Width="92" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="White" Foreground="Black" Background="White" Click="btnRemoveSelectedReceipt_Click" Height="21"/>
+                    <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Top="513" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" RenderTransformOrigin="0.465,-1" Canvas.Left="-2"/>
+                    <Label Content="Belopp för kvitto" Canvas.Top="423" Width="144" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label Content="Ladda upp kvitto
-                           " Canvas.Left="1" Canvas.Top="352" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174"/>
-                    <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="456" Canvas.Top="665" Width="254" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="56" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="{x:Null}"/>
-                    <Label Content="Maxbelopp för land
-                           " Canvas.Left="191" Canvas.Top="231" Width="163" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="1" Canvas.Top="320" Width="87" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20"/>
+                           " Canvas.Top="347" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174"/>
+                    <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="538" Canvas.Top="715" Width="254" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="56" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="{x:Null}"/>
+                    <Label Content="Maxbelopp för valt land                            " Canvas.Left="178" Canvas.Top="214" Width="200" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="1" Canvas.Top="315" Width="87" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20"/>
                     <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="363" Canvas.Top="279" RenderTransformOrigin="1.556,2.432" Width="93"/>
                     <TextBox x:Name="tbNotes" Height="288" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="241" Width="257" Background="Black" Foreground="White"/>
-                    <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="454" Canvas.Top="210" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="456" Canvas.Top="535" Width="254" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
-                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="456" Canvas.Top="535" Width="253" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click"/>
-                    <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="122" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
-                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="88" Canvas.Top="320" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="19"/>
-                    <Label Content="            " Canvas.Left="195" Canvas.Top="260" Width="71" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FFAC5F5F" Height="27"/>
-                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="167" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
+                    <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="449" Canvas.Top="216" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="563" Canvas.Top="535" Width="147" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
+                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="563" Canvas.Top="534" Width="147" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click" Height="22"/>
+                    <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="127" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
+                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="88" Canvas.Top="315" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20"/>
+                    <Label Content="            " Canvas.Left="183" Canvas.Top="241" Width="71" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FFAC5F5F" Height="27"/>
+                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
                     <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF894F4F"/>
                     <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
                     <Label x:Name="LbTotalKm" Content="Sammanlagd sträcka" Canvas.Left="1" Canvas.Top="97" Foreground="White" FontSize="16" FontWeight="Bold"/>
@@ -97,13 +96,13 @@
                         </DatePicker.RenderTransform>
                     </DatePicker>
                     <ListBox x:Name="listBoxDays" Height="146" Width="176" Canvas.Left="1" Canvas.Top="169" Background="Black" Foreground="White"/>
-                    <ListBox x:Name="listBoxReceipts" Height="155" Width="411" Canvas.Left="4" Canvas.Top="566" Foreground="White" Background="Black"/>
+                    <ListBox x:Name="listBoxReceipts" Height="155" Width="411" Canvas.Left="1" Canvas.Top="538" Foreground="White" Background="Black"/>
 
 
                 </Canvas>
             </TabItem>
-            <TabItem Header="Förskottsansökan" Margin="82,-2,-82,1" Background="White" Foreground="Black" Width="182" Height="63" />
-            <TabItem Header="Chef" HorizontalAlignment="Left" Width="182" Margin="78,-2,-78,2" Background="White" BorderBrush="{x:Null}" Foreground="Black" Cursor="None" Height="63" >
+            <TabItem Header="Förskottsansökan" Margin="82,-2,-82,1" Background="White" Foreground="Black" Width="182" Height="63" FontSize="14" FontWeight="Bold" />
+            <TabItem Header="Chef" HorizontalAlignment="Left" Width="182" Margin="78,-2,-78,2" Background="White" BorderBrush="{x:Null}" Foreground="Black" Cursor="None" Height="63" FontSize="14" FontWeight="Bold" >
                 <Canvas Height="836" Margin="10,0,81,-9">
                     <Label x:Name="lbUsers" Content="Användare" Canvas.Left="26" Canvas.Top="26" Width="100" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.48,0.724" />
                     <Label x:Name="lbUsernameLabel" Content="Användarnamn" Canvas.Left="454" Canvas.Top="49" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
@@ -155,8 +154,14 @@
 
                 </Canvas>
             </TabItem>
-            <TabItem Header="Valutakonverterare&#xD;&#xA;" HorizontalAlignment="Left" Height="63" VerticalAlignment="Bottom" Width="182" Margin="68,-2,-68,2" Padding="6,12,6,2" Background="White" Foreground="Black">
-                <Grid x:Name="MainWindowCurrency" Background="#FFE5E5E5">
+            <TabItem Header="Valutakonverterare&#xD;&#xA;" HorizontalAlignment="Left" Height="63" VerticalAlignment="Bottom" Width="182" Margin="68,-2,-68,2" Padding="6,12,6,2" Background="White" Foreground="Black" FontSize="14" FontWeight="Bold">
+                <Grid x:Name="MainWindowCurrency">
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0"/>
+                            <GradientStop Color="#FFEA6F6F" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="268*"/>
                         <ColumnDefinition Width="475*"/>
