--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿    <Window x:Class="Scrumproject.MainWindow"
+﻿<Window x:Class="Scrumproject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
@@ -99,8 +99,8 @@
                         <ListBox x:Name="listBoxReceipts" Height="155" Width="411" Canvas.Left="1" Canvas.Top="538" Foreground="White" Background="Black"/>
                         <Label x:Name="lbLoggedInAs" Content="Inloggad som: " Canvas.Left="467" Canvas.Top="-11" RenderTransformOrigin="0.3,0.534" Foreground="White" FontSize="16"/>
                         <Label x:Name="lbLoggedInAsThisUser" Content="" Canvas.Left="613" Canvas.Top="-11" Width="159" Foreground="White" FontSize="16"/>
-                        <Button x:Name="BtnLogIn" Content="Logga In" Canvas.Left="467" Canvas.Top="24" Width="75" Foreground="Black" Background="White"/>
-                        <Button x:Name="btnLogOut" Content="Logga ut" Canvas.Left="563" Canvas.Top="25" Width="75" Background="White" Foreground="Black"/>
+                        <Button x:Name="BtnLogIn" Content="Logga In" Canvas.Left="467" Canvas.Top="24" Width="75" Foreground="Black" Background="White" Click="BtnLogIn_Click"/>
+                        <Button x:Name="btnLogOut" Content="Logga ut" Canvas.Left="563" Canvas.Top="25" Width="75" Background="White" Foreground="Black" Visibility="Hidden" Click="btnLogOut_Click"/>
                         <Button x:Name="btnForgotPassword" Content="Glömt Lösenord" Canvas.Left="467" Canvas.Top="57" Width="122" Background="White" Foreground="Black"/>
 
 
@@ -115,7 +115,7 @@
                         <Button x:Name="btnAddUser" Content="Lägg till" Canvas.Left="456" Canvas.Top="298" Width="123" RenderTransformOrigin="0.5,0.5" Click="Button_Click" Foreground="White" Background="Black"/>
                         <Label Content="Chef" Canvas.Left="456" Canvas.Top="255" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <Label x:Name="lbLoggedIn" Content="Inloggad:" Canvas.Left="454" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                        <Label x:Name="lbLoggedInUser" Content="" Canvas.Left="580" Width="121" Foreground="White" FontWeight="Bold" FontSize="12" BorderBrush="White" Canvas.Top="8" Height="21"/>
+                        <Label x:Name="lbLoggedInUser" Content="" Canvas.Left="580" Width="121" Foreground="White" FontWeight="Bold" FontSize="12" BorderBrush="White" Height="29"/>
                         <Label x:Name="lbFirstName" Content="Förnamn" Canvas.Left="456" Canvas.Top="166" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <TextBox x:Name="tbFirstName" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="173" Width="121" Background="Black" Foreground="White"/>
                         <Label x:Name="lbLastName" Content="Efternamn " Canvas.Left="456" Canvas.Top="197" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
@@ -173,7 +173,8 @@
                         <Button Content="Uppdatera" Canvas.Left="547" Canvas.Top="750" Width="88" Background="Black" Foreground="White"/>
                         <Button x:Name="btnRemoveCountry" Content="Ta bort" Canvas.Left="643" Canvas.Top="750" Width="75" RenderTransformOrigin="-0.227,0.63" Foreground="White" Background="Black"/>
                         <Label Content="Välj ett land att uppdatera eller lägg till nytt" Canvas.Left="30" Canvas.Top="626" RenderTransformOrigin="-1.322,0.379" Foreground="White"/>
-                        <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="721" Canvas.Top="6" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black"/>
+                        <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="721" Canvas.Top="6" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" Click="btnLogOutChef_Click" Visibility="Hidden"/>
+                        <Button x:Name="btnLogInChef" Content="Logga in" Canvas.Left="721" Canvas.Top="-22" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" Click="btnLogInChef_Click"/>
 
                     </Canvas>
                 </TabItem>
@@ -207,6 +208,6 @@
         </Grid>
 
 
-        </ScrollViewer>
+    </ScrollViewer>
 
 </Window>
