--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -44,12 +44,12 @@
                     <Label x:Name="lbFreeDay" Content="Ange antal lediga dagar" Canvas.Top="18" Width="197" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbCarTripLength" Content="Lägg till bilresa" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="1" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label x:Name="lbLand" Content="Välj land" Canvas.Left="179" Canvas.Top="164" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbLand" Content="Välj land" Canvas.Left="231" Canvas.Top="164" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="74" Width="102" Background="Black" Foreground="White"/>
                     <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan" Canvas.Left="449" Canvas.Top="29" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <TextBox x:Name="tbDoneOnTrip" Height="135" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="56" Width="257" Background="Black" Foreground="White"/>
                     <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="24" Width="38" Background="Black" Foreground="White"/>
-                    <ComboBox x:Name="CbCountries" Canvas.Left="182" Canvas.Top="191" Width="224" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
+                    <ComboBox x:Name="CbCountries" Canvas.Left="234" Canvas.Top="191" Width="172" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
                     <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto
                             " Canvas.Left="165" Canvas.Top="473" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
                     <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="399" Width="88" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="165"/>
@@ -71,16 +71,16 @@
                     <Label Content="Ladda upp kvitto
                            " Canvas.Top="347" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174"/>
                     <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="538" Canvas.Top="715" Width="254" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="56" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="{x:Null}"/>
-                    <Label Content="Maxbelopp för valt land                            " Canvas.Left="178" Canvas.Top="214" Width="200" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="1" Canvas.Top="315" Width="87" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20"/>
+                    <Label Content="Maxbelopp för valt land                            " Canvas.Left="230" Canvas.Top="214" Width="200" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="1" Canvas.Top="315" Width="87" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20" Click="btnSaveStartCountry_Click"/>
                     <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="363" Canvas.Top="279" RenderTransformOrigin="1.556,2.432" Width="93"/>
                     <TextBox x:Name="tbNotes" Height="288" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="241" Width="257" Background="Black" Foreground="White"/>
                     <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="449" Canvas.Top="216" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="563" Canvas.Top="535" Width="147" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
                     <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="563" Canvas.Top="534" Width="147" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click" Height="22"/>
                     <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="127" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
-                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="88" Canvas.Top="315" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20"/>
-                    <Label Content="            " Canvas.Left="183" Canvas.Top="241" Width="71" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FF5F93AC" Height="27"/>
+                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="88" Canvas.Top="315" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20" Click="btnDeleteCountry_Click"/>
+                    <Label Content="            " Canvas.Left="236" Canvas.Top="241" Width="71" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FF5F93AC" Height="27"/>
                     <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
                     <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF4F6C89"/>
                     <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
@@ -95,7 +95,7 @@
                             </TransformGroup>
                         </DatePicker.RenderTransform>
                     </DatePicker>
-                    <ListBox x:Name="listBoxDays" Height="146" Width="176" Canvas.Left="1" Canvas.Top="169" Background="Black" Foreground="White"/>
+                    <ListBox x:Name="listBoxDays" Height="146" Width="228" Canvas.Left="1" Canvas.Top="169" Background="Black" Foreground="White"/>
                     <ListBox x:Name="listBoxReceipts" Height="155" Width="411" Canvas.Left="1" Canvas.Top="538" Foreground="White" Background="Black"/>
 
 
@@ -112,18 +112,18 @@
                     <Label x:Name="lbLoggedIn" Content="Inloggad:" Canvas.Left="454" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" Canvas.Top="20"/>
                     <Label x:Name="lbLoggedInUser" Content="" Canvas.Left="579" Width="121" Foreground="White" Background="#FF5B8187" FontWeight="Bold" FontSize="12" BorderBrush="White" Canvas.Top="25" Height="21"/>
                     <Label x:Name="lbFirstName" Content="Förnamn" Canvas.Left="456" Canvas.Top="166" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                    <TextBox x:Name="tbFirstName" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="173" Width="121" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbFirstName" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="173" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                     <Label x:Name="lbLastName" Content="Efternamn " Canvas.Left="456" Canvas.Top="197" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                    <TextBox x:Name="tbLastNamne" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="203" Width="121" Background="Black" Foreground="White" />
+                    <TextBox x:Name="tbLastNamne" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="203" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" />
                     <Label x:Name="lbSSN" Content="Personnummer " Canvas.Left="456" Canvas.Top="138" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                    <TextBox x:Name="tbSsn" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="144" Width="121" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbSsn" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="144" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                     <Label x:Name="lbEmail" Content="E-post " Canvas.Left="456" Canvas.Top="226" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379"/>
-                    <TextBox x:Name="tbEmail" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="232" Width="120" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbEmail" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="232" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                     <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="580" Canvas.Top="298" Width="120" Click="btnUpdateInfo_Click" Background="Black" Foreground="White"/>
                     <Button x:Name="btnClear" Content="Rensa" Canvas.Left="456" Canvas.Top="319" Width="123" Background="Black" Foreground="White"/>
                     <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="580" Canvas.Top="319" Width="120" Click="btnInactive_Click" Foreground="White" Background="Black"/>
-                    <TextBox x:Name="tbPassword" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="84" Width="121" Background="Black" Foreground="White"/>
-                    <TextBox x:Name="tbUsername" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="55" Width="121" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbPassword" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="84" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
+                    <TextBox x:Name="tbUsername" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="55" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                     <Label x:Name="lbSentInReports" Content="Rapporter" Canvas.Left="26" Canvas.Top="284" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                     <TextBox x:Name="tbSentInReports" Height="270" Canvas.Left="30" TextWrapping="Wrap" Text="" Canvas.Top="308" Width="398" Background="Black" Foreground="White"/>
                     <Button x:Name="btnShowPDF" Content="Visa PDF" Canvas.Left="456" Canvas.Top="355" Width="244" RenderTransformOrigin="0.5,0.5" Foreground="White" Background="Black" Height="20">
@@ -147,9 +147,9 @@
                     <Button x:Name="btnSearchReports" Content="Sök" Canvas.Left="333" Canvas.Top="583" Width="95" Background="Black" Foreground="White" Height="23"/>
                     <TextBox x:Name="tbSearchUser" Height="23" Canvas.Left="30" TextWrapping="Wrap" Text="" Canvas.Top="226" Width="294" Background="Black" Foreground="White"/>
                     <Button x:Name="btnSearchUser1" Content="Sök" Canvas.Left="329" Canvas.Top="226" Width="99" Background="Black" Foreground="White" Height="23"/>
-                    <TextBox x:Name="tbBoss" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="260" Width="120" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbBoss" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="260" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                     <Label x:Name="lbUserID" Content="Anst. nr" Canvas.Left="456" Canvas.Top="107" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                    <TextBox x:Name="tbUserID" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="113" Width="121" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbUserID" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="113" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                     <ListBox x:Name="listBoxUsers" Height="166" Width="398" Canvas.Left="30" Canvas.Top="55" Background="Black" Foreground="White"/>
 
                 </Canvas>
