--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -190,17 +190,17 @@
                             <ColumnDefinition Width="268*"/>
                             <ColumnDefinition Width="475*"/>
                         </Grid.ColumnDefinitions>
-                        <ComboBox x:Name="CbFromCurrency" HorizontalAlignment="Left" Margin="146,46,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CbFromCurrency_SelectionChanged"/>
-                        <ComboBox x:Name="CbToCurrency" HorizontalAlignment="Left" Margin="147,84,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CbToCurrency_SelectionChanged"/>
+                        <ComboBox x:Name="CbFromCurrency" HorizontalAlignment="Left" Margin="146,46,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="CbFromCurrency_SelectionChanged"/>
+                        <ComboBox x:Name="CbToCurrency" HorizontalAlignment="Left" Margin="147,84,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="CbToCurrency_SelectionChanged"/>
                         <Button x:Name="BtnConvert" Content="Konvertera&#xD;&#xA;" HorizontalAlignment="Left" Margin="183,286,0,0" VerticalAlignment="Top" Width="117" Click="BtnConvert_Click" Height="23" Grid.ColumnSpan="2"/>
                         <TextBox x:Name="TbToCurrency" HorizontalAlignment="Left" Height="78" Margin="38,203,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="262" IsEnabled="False" Grid.ColumnSpan="2"/>
-                        <TextBox x:Name="TbFromCurrency" HorizontalAlignment="Left" Height="23" Margin="147,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBox x:Name="TbFromCurrency" HorizontalAlignment="Left" Height="23" Margin="147,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125"/>
                         <Label Content="Summa" HorizontalAlignment="Left" Margin="38,122,0,0" VerticalAlignment="Top" Width="111" Foreground="White"/>
                         <Label Content="Valuta från" HorizontalAlignment="Left" Margin="37,45,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.289,0.192" Foreground="White"/>
                         <Label Content="Valuta till" HorizontalAlignment="Left" Margin="38,84,0,0" VerticalAlignment="Top" Width="96" Foreground="White"/>
                         <Label Content="Resultat" HorizontalAlignment="Left" Margin="36,177,0,0" VerticalAlignment="Top" Foreground="White"/>
-                        <Label Content="&#xD;&#xA;" HorizontalAlignment="Left" Margin="37.373,39,0,0" VerticalAlignment="Top" Name="lbFromCurrency" Width="57" Height="23" Grid.Column="1" Foreground="White"/>
-                        <Label Content="&#xD;&#xA;&#xD;&#xA;" HorizontalAlignment="Left" Margin="243.373,39,0,0" VerticalAlignment="Top" Name="lbToCurrency" Height="23" Width="36" Grid.Column="1" Foreground="White"/>
+                        <Label Content="&#xD;&#xA;" HorizontalAlignment="Left" Margin="271,45,0,0" VerticalAlignment="Top" Name="lbFromCurrency" Width="91" Height="29" Foreground="White" Grid.ColumnSpan="2"/>
+                        <Label Content="&#xD;&#xA;&#xD;&#xA;" HorizontalAlignment="Left" Margin="272,79,0,0" VerticalAlignment="Top" Name="lbToCurrency" Height="34" Width="72" Foreground="White" Grid.ColumnSpan="2"/>
                     </Grid>
                 </TabItem>
             </TabControl>
